230523 강의실에서 (html table, list, form)

--- a/html/exam01.html
+++ b/html/exam01.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="Chrome">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>실습01</title>
+    <title>Table 실습01</title>
 </head>
 <body>
     
