--- a/html/exam02.html
+++ b/html/exam02.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="Chrome">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>실습02</title>
+    <title>Table 실습02</title>
 </head>
 <body>
     
