230509 강의실에서(오전 수업, 어제 실습 수정, CSS 마무리)

--- a/html/230508/exam02.html
+++ b/html/230508/exam02.html
@@ -35,7 +35,7 @@
             font-weight: 500;
             color: aliceblue;
 
-            padding: 13px 10px;
+            padding: 13px 27px;
             font-size: 1.3rem;
         }
 
@@ -43,16 +43,18 @@
             font-weight: 600;
             font-size: larger;
 
-            padding: 15px 10px;
+            padding: 15px 27px;
         }
 
-        #name {
+        /* #name {
             font-weight: 900;
-        }
+        } */
 
         #talk {
+            /* position: absolute; */
+            
+            /* background-color: aqua; */
             font-weight: 500;
-            padding: 7px;
         }
 
         .content {
@@ -62,42 +64,19 @@
             /* background-color: white; */
             /* display: inline; */
         }
-        .park {
+        .bubble {
             background-color: white;
             position: relative;
-            top: -20px;
+            top: -25px;
             left: -20px;
 
             /* border: 3px red solid; */
             width: 220px;
-            height: 40px;
+            /* height: 40px; */
             margin: 10px;
             padding: 8px;
         }
-        .ahn {
-            background-color: white;
-            position: relative;
-            top: -20px;
-            left: -20px;
 
-            /* border: 3px red solid; */
-            width: 220px;
-            height: 25px;
-            margin: 10px;
-            padding: 8px;
-        }
-        .lee {
-            background-color: white;
-            position: relative;
-            top: -20px;
-            left: -20px;
-
-            /* border: 3px red solid; */
-            width: 220px;
-            height: 40px;
-            margin: 10px;
-            padding: 8px;
-        }
     </style>
 </head>
 
@@ -105,26 +84,23 @@
     <div id="outer">
         <div id="topper">
             <div id="hello">
-                최도근님, 안녕하세요?
+                정수빈님, 안녕하세요?
             </div>
         </div>
         <div id="guide">페이스북 색감따라하기</div>
         <div class="content">
-            <div class="park">
-                <span id="name">박지성
-                    <span id="talk">
+            <div class="bubble">
+                <span id="talk"><b>박지성</b>
                         SBS에서 월드컵 보세요! <br> </span>
                 </span>
             </div>
-            <div class="ahn">
-                <span id="name">안정환
-                    <span id="talk">
+            <div class="bubble">
+                <span id="talk"><b>안정환</b>
                         MBC죠... <br> </span>
                 </span>
             </div>
-            <div class="lee">
-                <span id="name">이영표
-                    <span id="talk">
+            <div class="bubble">
+                <span id="talk"><b>이영표</b>
                         KBS는 수신료의 가치를.. <br> </span>
                 </span>
             </div>
