230509 강의실에서(함수function, onmouseover(), onmouseleave())

--- a/js/230509/js02.html
+++ b/js/230509/js02.html
@@ -5,12 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .big-text {
+            font-size: xx-large;
+        }
+
+        .blue-color {
+            color: blue;
+        }
+
+    </style>
+
+    <script src="js02.js"></script>
 </head>
 <body>
-    <script>
+    <!-- <script>
         for (let i = 0; i <10; i++) {
             console.log(i);
         }
-    </script>
+    </script> -->
+    <div id="div1_id">나 여기 있어</div>
+
+    <div class="div1_class"
+    name="div1_name">1</div>
+    <div class="div1_class">2</div>
+    <div class="div1_class">3</div>
+
+    <input type="text" name="name">
+
+    <input type="button" value="big-text" onclick="changeBigText()">
+    <input type="button" value="빨강" onclick="changeRedColor()">
 </body>
 </html>
