--- a/js/230509/practice02.html
+++ b/js/230509/practice02.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>1~100 숫자 입력받기</title>
 </head>
 <body>
     <script src="utils.js"></script>
 
-    <h3>숫자를 입력받아봅시다</h3>
-    <input type="button" value="입력하려면 여기" onclick="javascript:enterNum()">
+    <h3>1~100 사이의 숫자만 입력해주세요!</h3>
+    <input type="button" value="입력하려면 클릭" onclick="javascript:enterNum()">
 </body>
 </html>
