--- a/js/230509/practice03.html
+++ b/js/230509/practice03.html
@@ -22,7 +22,8 @@
 
 <body>
     <h3>값이 없으면 입력하고 있으면 색깔 바꾸기!</h3>
-    <input type="button" value="여기를 눌러서 시작하세요" onclick="enterText()"></input>
+    <input type="text" id="inputText">
+    <input type="button" value="입력하기" onclick="enterText()"></input>
 
     <div class="outer">
         <div id="textHere"></div>
