--- a/js/230509/practice03.html
+++ b/js/230509/practice03.html
@@ -21,15 +21,16 @@
 </head>
 
 <body>
-    <h3>값이 없으면 입력하고 있으면 색깔 바꾸기!</h3>
-    <input type="text" id="inputText">
-    <input type="button" value="입력하기" onclick="enterText()"></input>
+    <h3>값이 없으면 입력하고, 있으면 색깔 바꾸기!</h3>
+    <form>
+        <input type="text" id="inputText"></input>
+        <input type="button" value="뿅" onclick="enterText()"></input>
 
-    <div class="outer">
-        <div id="textHere"></div>
-        <div id="buttonHere"></div>
-    </div>
-
+        <div class="outer">
+            <div id="textHere"></div>
+            <div id="buttonHere"></div>
+        </div>
+    </form>
 </body>
 
 </html>
