--- a/jquery/230510/practice01.html
+++ b/jquery/230510/practice01.html
@@ -14,76 +14,63 @@
 <script>
 
     //회원가입하기 활성화
-    function checkAllConditions() {
+        // $(function() {
+        //     const id = $("#userId").val();
+        //     const pw = $("#userPw").val();
+        //     const pw2 = $("#userPw2").val();
 
-        let isValid = true;
+        //     //아이디, 비번, 비번확인이 빈칸이면 가입버튼 비활성화
+        //     if(id === '' || pw === '' || pw2 === '') {
+        //         // $('#join').attr('disabled','true')
+        //         $("#join").prop("disabled", true);
+        //     }
+        // })
 
-        //아이디 유효성 체크
-        $(function checkId() {
+        // //아이디, 비번, 비번확인이 빈칸이면 가입버튼 비활성화 기능구현못함.
+        // //alert 영향때문인듯?
+        // const id = $("#userId").val();
+        // const pw = $("#userPw").val().trim();
+        // const pw2 = $("#userPw2").val().trim();
+
+        // if (id === '' || pw === '' || pw2 === '') {
+        //     // $('#join').attr('disabled','true')
+        //     $("#join").prop("disabled", true);
+        // } else {
+        //     $("#join").prop("disabled", false);
+        // }
+
+        function checkAllConditions() {
             if (($('#userId').val() === null)) {
-                $('#userId').innerHtml
+                //아이디 빈칸이라면
                 alert("아이디를 입력해주세요")
-                isValid = false;
-            }
-            if (($('#userId').val()).includes("@") === false) {
+                //이메일형식?
+            } else if (($('#userId').val()).includes("@") === false) {
                 alert("이메일 형식의 아이디가 아니에요")
-                isValid = false;
-            }
-        })
-
-
-        //비번 일치 체크
-        $(function checkPw() {
-            if ($('#userPw').val().length < 5) {
+                //비밀번호 자리수 체크
+            } else if ($('#userPw').val().trim().length < 5) {
                 alert("비밀번호가 너무 짧아요. 5자리 이상으로 입력해주세요")
-                isValid = false;
-            }
-
-            if (($('#userPw').val()) !== ($('#userPw2').val())) {
+                //비번 일치 체크
+            } else if (($('#userPw').val().trim()) !== ($('#userPw2').val().trim())) {
                 alert("비밀번호가 일치하지 않아요")
-                isValid = false;
-            }
-        })
-
-        //성별 선택 체크
-        $(function checkGender() {
-            if (!($('input:radio').is(':checked'))) {
+                //성별 선택 체크
+            } else if (!($('input:radio').is(':checked'))) {
                 alert("성별이 선택되지 않았어요")
-                isValid = false;
-            }
-        })
-
-        //직군 선택 체크
-        $(function checkJob() {
-            if ($('#job-select option:selected').val() === '--직군을 선택하세요--') {
+            } else if ($('#job-select option:selected').val() === '--직군을 선택하세요--') {
+                //직군 선택 체크
                 alert("직업이 선택되지 않았어요")
-                isValid = false;
-            }
-        })
-
-        //취미 선택 체크
-        $(function checkHobby() {
-
-            //하나라도 선택되었나?
-            if ($('input:checkbox').is(':checked')) {
+            } else if ($('input:checkbox').is(':checked')) {
+                //취미 선택 체크
+                //하나라도 선택되었으면
                 if ($('input[type=checkbox]:checked').length < 3) {
                     alert("취미를 3개 이상 선택해주세요")
-                    isValid = false;
+                } else {
+                    //하나도 선택되지 않으면
+                    alert("취미가 선택되지 않았어요")
                 }
-                //하나도 선택되지 않으면
             } else {
-                alert("취미가 선택되지 않았어요")
-                isValid = false;
-            }
-        })
-
-        $(function welcome() {
-            if (isValid === true) {
                 alert("환영합니다! 회원가입이 완료되었습니다!")
             }
-        })
-
-    }
+        }
 
     // hobby : ${$('input:hobby-select').val()}
 
@@ -100,20 +87,20 @@
         padding: 0px 20px 20px 20px;
         border-radius: 10px;
     }
-    
+
     #header {
         background-color: #ffffff;
         display: inline-block;
         position: relative;
         border-radius: 3px;
         padding: 5px;
-        
+
     }
 </style>
 
 <body>
     <div id="outer">
-            <h2 id="header" style="color:#aa78ff">회 원 가 입</h1><br>
+        <h2 id="header" style="color:#aa78ff">회 원 가 입</h1><br>
             <input type="text" id="userId" placeholder="water4360@naver.com"
                 style="border: #aa78ff; border-style: solid;">
             <br><br>
@@ -135,9 +122,9 @@
             </select><br><br>
 
             <span id="hobby-select" style="font-size: medium; color: #aa78ff;">취미를 골라주세요<b>(3개 이상)</b></span> <br>
-            <input type="checkbox" name="" id="">코딩
-            <input type="checkbox" name="" id="">게임
-            <input type="checkbox" name="" id="">독서 <br>
+            <input type="checkbox" id="">코딩
+            <input type="checkbox" id="">게임
+            <input type="checkbox" id="">독서 <br>
             <input type="checkbox" name="" id="">산책
             <input type="checkbox" name="" id="">낚시
             <input type="checkbox" name="" id="">수영 <br>
@@ -146,7 +133,7 @@
 
             <input type="submit" id="join" onclick="checkAllConditions(), printInfo()" value="회원가입"></input>
             <input type="reset" id="reset" value="취소"></input>
-        </div>
+    </div>
 </body>
 
 </html>
