--- a/game/exam02~04 copy.html
+++ b/game/exam02~04 copy.html
@@ -11,7 +11,7 @@
     <style>
         #container {
             position: absolute;
-            left: 100px;
+            left: 10px;
             width: 600px;
             height: 300px;
             border: 1px black solid;
@@ -33,7 +33,7 @@
             background-position: 100%;
 
         } */
-/* 
+        /* 
         @keyframes slide {
             from {
                 transform: translate(500px, 0);
@@ -47,22 +47,37 @@
         #hari {
             position: absolute;
             left: 20px;
-            bottom: 15px;
-            width: 50px;
-            height: 50px;
+            bottom: 40px;
+            width: 100px;
+            height: 100px;
             border: 1px solid;
+            /* 좌우대칭 */
+            /* transform: scaleX(-1); */
         }
 
         #bone {
             position: absolute;
-            width: 20px;
-            height: 20px;
+            width: 40px;
+            height: 40px;
             right: 0px;
-            bottom: 0px;
+            bottom: 40px;
         }
 
         #score {
             float: right;
+        }
+
+        #gameover_screen {
+
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            color: white;
+            font-size: 30px;
+            text-align: center;
+            line-height: 200px;
+            display: none;
         }
     </style>
 
@@ -109,6 +124,12 @@
                 const rect1 = el1.getBoundingClientRect();
                 const rect2 = el2.getBoundingClientRect();
 
+                // return !(
+                //     rect1.bottom < rect2.top ||
+                //     rect1.top > rect2.bottom ||
+                //     rect1.right < rect2.left ||
+                //     rect1.left > rect2.right
+                // );
                 return !(
                     rect1.bottom < rect2.top ||
                     rect1.top > rect2.bottom ||
